# neotags.nvim

./: .gitignore  Makefile  README.md
doc/: neotags.txt
neotags_bin/: CMakeLists.txt  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  cmake-config.h.in  config.h.in  configure  configure.ac
neotags_bin/src/: CMakeLists.txt  Makefile.am  Makefile.in  archive_util.h  archive_util_gzip.c  archive_util_xz.c  bsd_funcs.c  bsd_funcs.h  getlines.c  id.c  linked_list.c  neotags.c  neotags.h  strip.c  tok.c  util.c  utility.c
plugin/: neotags.vim
plugin/neotags/: c.vim  cpp.vim  go.vim  haxe.vim  java.vim  javascript.vim  perl.vim  php.vim  python.vim  ruby.vim  rust.vim  sh.vim  shell.vim  vim.vim  zig.vim  zsh.vim
rplugin/python3/neotags/: __init__.py  diagnostics.py  neotags.py  tags  utils.py
